prevent loader from stretching

--- a/src/design-system/components/atoms/loader/loader.module.css
+++ b/src/design-system/components/atoms/loader/loader.module.css
@@ -8,11 +8,12 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
     opacity: 1;
     transition: .5s ease;  
     z-index: 3;
+    
     &.loaderAbsolutePos{
         position: absolute;
     }
